[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["cargo", "derive"] }
common = { path = "../common" }
rand = "0.8.5"
rust-crypto = "^0.2"
